# src/main/java/ai/summary/transactions/controller/AiTransactionsControllerImpl.java
@@ -1,8 +1,10 @@
 package ai.summary.transactions.controller;
 
-import ai.summary.transactions.model.ProcessAITransaction200Response;
-import ai.summary.transactions.model.ProcessAITransactionRequest;
-import ai.summary.transactions.model.ProcessAITransactionSourceParameter;
+import ai.summary.transactions.model.ProcessAITransactionSummary200Response;
+import ai.summary.transactions.model.ProcessAITransactionSummaryRequest;
+
+import java.time.LocalDate;
+
 import ai.summary.transactions.application.AISummaryTransactionApp;
 import io.micronaut.http.HttpResponse;
 import io.micronaut.http.annotation.Controller;
@@ -19,31 +21,23 @@ public class AiTransactionsControllerImpl implements AiTransactionsApi {
     private final AISummaryTransactionApp aiTransactionApplication;
 
     @Override
-    public HttpResponse<@Valid ProcessAITransaction200Response> processAITransaction(
-            @NotNull ProcessAITransactionSourceParameter source,
-            @NotNull @Valid ProcessAITransactionRequest processAITransactionRequest) {
+    public HttpResponse<@Valid ProcessAITransactionSummary200Response> processAITransactionSummary(
+            @NotNull LocalDate startDate, @NotNull LocalDate endDate,
+            @NotNull @Valid ProcessAITransactionSummaryRequest processAITransactionSummaryRequest) {
+        // TODO Auto-generated method stub
         try {
-            String result;
+            String result = aiTransactionApplication
+                    .processByList(processAITransactionSummaryRequest.getQuestion());
 
-            if (source == ProcessAITransactionSourceParameter.QUERY) {
-                result = aiTransactionApplication
-                        .processByQuery(processAITransactionRequest.getQuestion());
-            } else if (source == ProcessAITransactionSourceParameter.LIST) {
-                result = aiTransactionApplication
-                        .processByList(processAITransactionRequest.getQuestion());
-            } else {
-                log.error("Invalid source parameter: {}", source);
-                return HttpResponse.badRequest();
-            }
-
-            var response = new ProcessAITransaction200Response()
+            var response = new ProcessAITransactionSummary200Response()
                     .result(result);
 
             return HttpResponse.ok(response);
         } catch (Exception exception) {
-            log.error("Error processing AI transaction with source {}: {}",
-                    source, processAITransactionRequest.getQuestion(), exception);
+            log.error("Error processing AI transaction with startDate {}: endDate {}: {}",
+                    startDate, endDate, processAITransactionSummaryRequest.getQuestion(), exception);
             return HttpResponse.serverError();
         }
     }
+
 }
